--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,7 +3,10 @@
 <p *ngIf="user">Logged in as: {{ user?.email }} - {{ user?.displayName }}</p>
 
 <button class="btn btn-primary mr-2" *ngIf="!user" (click)="register()">Register</button>
-<br><button class="btn btn-primary" *ngIf="user" (click)="openPage('/createApartment')">Apartman yarat</button><br>
-<button class="btn btn-primary" *ngIf="user" (click)="logout()">Logout</button>
+
+<br><button class="btn btn-primary" *ngIf="user" (click)="openPage('/createApartment')">Create Apartment</button><br>
+<br><button class="btn btn-primary" *ngIf="user" (click)="openPage('/setDues')">Set Dues</button><br>
+
+<br><button class="btn btn-primary" *ngIf="user" (click)="logout()">Logout</button><br>
 <button class="btn btn-primary" *ngIf="!user" (click)="login()">Login</button>
 
