--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,6 +7,10 @@
 <br><button class="btn btn-primary" *ngIf="user" (click)="openPage('/createApartment')">Create Apartment</button><br>
 <br><button class="btn btn-primary" *ngIf="user" (click)="openPage('/setDues')">Set Dues</button><br>
 <br><button class="btn btn-primary" *ngIf="user" (click)="openPage('/createAnnouncement')">Create Announcement</button><br>
+<br><button class="btn btn-primary" *ngIf="user" (click)="openPage('/assignJanitor')">Assign Janitor</button><br>
+<br><button class="btn btn-primary" *ngIf="user" (click)="openPage('/apartmentInfo')">Apartment Information</button><br>
+<br><button class="btn btn-primary" *ngIf="user" (click)="openPage('/apartmentPayments')">Apartment Payments</button><br>
+<br><button class="btn btn-primary" *ngIf="user" (click)="openPage('/makeQuestionnaire')">Make a Questionnaire</button><br>
 
 <br><button class="btn btn-primary" *ngIf="user" (click)="logout()">Logout</button><br>
 <button class="btn btn-primary" *ngIf="!user" (click)="login()">Login</button>
