google map added

--- a/src/app/home/apartment-info/apartment-info.component.html
+++ b/src/app/home/apartment-info/apartment-info.component.html
@@ -6,3 +6,7 @@
 <p *ngIf="apartmentDues">Apartment Dues: {{ apartmentDues}}</p>
 
 <qrcode *ngIf="apartmentQR" [qrdata]="apartmentQR" [size]="256" [level]="'M'"></qrcode> 
+
+<agm-map [zoom]="8" [latitude]="latitude" [longitude]="longitude">
+    <agm-marker [latitude]="latitude" [longitude]="longitude"></agm-marker>
+</agm-map>
